[package]
name = "serde-hlua"
version = "0.2.2"
authors = ["Terence <terence@arkas.gallery>"]

description = "Serde implementation for hlua transport values"
repository = "github.com/tpdickso/serde-hlua"
readme = "README.md"

keywords = ["lua", "hlua", "serde", "serialization", "deserialization"]
categories = ["encoding", "api-bindings"]
license-file = "LICENSE"

[features]
default = ["base64-bytes"]
base64-bytes = ["base64"]

[dependencies]
hlua = "*" # { git = "https://github.com/tomaka/hlua.git" }
serde = "1.0"
base64 = { version = "0.9", optional = true }

[dev-dependencies]
serde_bytes = "*"
serde_derive = "*"
